--- a/lect27/index.html
+++ b/lect27/index.html
@@ -13,7 +13,13 @@
     </style>
 </head>
 <body>
-    <div id="card"></div>
+    
+
+    <input  type="Enter your city"/>
+    <button>check</button>
+    <div>
+        
+    </div>
     <script src="index.js">
 
     </script>
